# pyvinecopulib

./: .appveyor.yml  .buildinfo  .codacy.yml  .gitattributes  .gitignore  .gitmodules  .restore.sh  .travis.yml  .zenodo.json  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CTestConfig.cmake  INSTALLATION.txt  LICENSE  LICENSE.txt  MANIFEST.in  PyVinecopulibConfig.cmake.in  PyVinecopulibConfigure.h.in  README.html  README.md  README.txt  UsePyVinecopulib.cmake.in  appveyor.yml  clang-env.txt  config.sh  environment.yml  examples.html  features.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  (+4 more)
CMake/: CPackOptions.cmake.in  CPackSetup.cmake  CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  Findgflags.cmake.in  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  mitkFunctionCheckCompilerFlags.cmake  mitkFunctionInstallExternalCMakeProject.cmake  mitkMacroEmptyExternalProject.cmake  pvAddArrayFire.cmake  pvAddBoost.cmake  pvAddDocs.cmake  pvAddEigen.cmake  pvAddFLANN.cmake  pvAddGuiProjects.cmake  pvAddOpenCV.cmake  pvAddPCL.cmake  pvAddPythonBindings.cmake  pvAddUnityWrapper.cmake  pvAddVTK.cmake  pvAddgflags.cmake  pvAddglog.cmake  pvExternalProjectHelperMacros.cmake  pvFunctionFixInstallNameForMac.cmake  pvIncludeArrayFire.cmake  pvIncludeBoost.cmake  pvIncludeCUDA.cmake  pvIncludeDocs.cmake  pvIncludeEigen.cmake  pvIncludeMPI.cmake  pvIncludeOpenCV.cmake  pvIncludeOpenMP.cmake  pvIncludePCL.cmake  pvIncludePythonBindings.cmake  pvIncludeQt.cmake  pvIncludeVTK.cmake  pvIncludegflags.cmake  (+11 more)
Code/: CMakeLists.txt  _version.py
Code/CommandLineApps/: CMakeLists.txt  pvMyFirstApp.cpp
Code/GuiApps/: CMakeLists.txt
Code/GuiApps/QMLVTKDemo/: CMakeLists.txt
Code/GuiApps/QMLVTKDemo/App/: main.cpp
Code/GuiApps/QMLVTKDemo/Model/: pvBaseModel.cpp  pvBaseModel.h  pvCubeModel.cpp  pvCubeModel.h  pvTriangleModel.cpp  pvTriangleModel.h
Code/GuiApps/QMLVTKDemo/Resources/: QMLVTKDemo.rc
Code/GuiApps/QMLVTKDemo/View/: main.qml  pvQOpenGLTriangleRenderer.cpp  pvQOpenGLTriangleRenderer.h  pvQQuickVTKView.cpp  pvQQuickVTKView.h
Code/GuiApps/QMLVTKDemo/icons/: icon.icns
Code/GuiApps/QOpenGLDemo/: CMakeLists.txt  main.cpp  pvOpenGLMainWindow.cpp  pvOpenGLMainWindow.h  pvOpenGLWidget.cpp  pvOpenGLWidget.h
Code/GuiApps/QtVTKDemo/: CMakeLists.txt
Code/GuiApps/QtVTKDemo/App/: CMakeLists.txt  main.cpp  pvCentralWidget.cpp  pvCentralWidget.h  pvCentralWidget.ui  pvMainWindow.cpp  pvMainWindow.h  pvMainWindow.ui
Code/GuiApps/QtVTKDemo/App/Resources/: QtVTK.rc
Code/GuiApps/QtVTKDemo/Controller/: CMakeLists.txt  pvControlPanelWidget.cpp  pvControlPanelWidget.h  pvControlPanelWidget.ui  pvQtVTKControllerWin32ExportHeader.h  pvTwinSliderWidget.cpp  pvTwinSliderWidget.h  pvTwinSliderWidget.ui
Code/GuiApps/QtVTKDemo/Controller/Resources/: qtvtkcontroller.qrc
Code/GuiApps/QtVTKDemo/Model/: CMakeLists.txt  pvQtVTKModelWin32ExportHeader.h  pvVolumeRenderingModel.cpp  pvVolumeRenderingModel.h
Code/GuiApps/QtVTKDemo/View/: CMakeLists.txt  pvQtVTKViewWin32ExportHeader.h  pvVTKViewWidget.cpp  pvVTKViewWidget.h
Code/Lib/: CMakeLists.txt  pvBasicTypes.cpp  pvBasicTypes.h  pvException.cpp  pvException.h  pvExceptionMacro.h  pvMyFunctions.cpp  pvMyFunctions.h  pvWin32ExportHeader.h
Code/PythonBoost/: CMakeLists.txt  pvLibPython.cpp  pvLibPythonWithOpenCV.cpp
Code/PythonPyBind/: CMakeLists.txt  pvLibPython.cpp
Code/UnityWrapper/: CMakeLists.txt  pvUnityWrapper.cpp  pvUnityWrapper.h
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
Testing/: CMakeLists.txt  catch.hpp  mpCudaTest.cu  pvBasicTest.cpp  pvCatchMain.cpp  pvCatchMain.h  pvCommandLineArgsTest.cpp
_generate/: pyvinecopulib.Bicop.__init__.html  pyvinecopulib.Bicop.aic.html  pyvinecopulib.Bicop.bic.html  pyvinecopulib.Bicop.cdf.html  pyvinecopulib.Bicop.fit.html  pyvinecopulib.Bicop.from_data.html  pyvinecopulib.Bicop.from_family.html  pyvinecopulib.Bicop.from_file.html  pyvinecopulib.Bicop.from_json.html  pyvinecopulib.Bicop.hfunc1.html  pyvinecopulib.Bicop.hfunc2.html  pyvinecopulib.Bicop.hinv1.html  pyvinecopulib.Bicop.hinv2.html  pyvinecopulib.Bicop.html  pyvinecopulib.Bicop.loglik.html  pyvinecopulib.Bicop.mbic.html  pyvinecopulib.Bicop.parameters_lower_bounds.html  pyvinecopulib.Bicop.parameters_to_tau.html  pyvinecopulib.Bicop.parameters_upper_bounds.html  pyvinecopulib.Bicop.pdf.html  pyvinecopulib.Bicop.plot.html  pyvinecopulib.Bicop.select.html  pyvinecopulib.Bicop.simulate.html  pyvinecopulib.Bicop.str.html  pyvinecopulib.Bicop.tau_to_parameters.html  pyvinecopulib.Bicop.to_file.html  pyvinecopulib.Bicop.to_json.html  pyvinecopulib.BicopFamily.html  pyvinecopulib.CVineStructure.__init__.html  pyvinecopulib.CVineStructure.from_dimension.html  pyvinecopulib.CVineStructure.from_file.html  pyvinecopulib.CVineStructure.from_json.html  pyvinecopulib.CVineStructure.from_matrix.html  pyvinecopulib.CVineStructure.from_order.html  pyvinecopulib.CVineStructure.html  pyvinecopulib.CVineStructure.min_array.html  pyvinecopulib.CVineStructure.needed_hfunc1.html  pyvinecopulib.CVineStructure.needed_hfunc2.html  pyvinecopulib.CVineStructure.simulate.html  pyvinecopulib.CVineStructure.str.html  (+70 more)
_static/: documentation_options.js
ci/: test_package.yml
cmake/: findDependencies.cmake  findHeaders.cmake
conda.recipe/: meta.yaml
docs/: CHANGELOG.md  Makefile  changes.rst  cmake_example.rst  conf.py  description.rst  gen_sphinx.py  index.rst  make.bat  pyvinecopulib.rst  serve_sphinx.py  sphinx_base.py
examples/: 01_bivariate_copulas.html  01_bivariate_copulas.ipynb  02_vine_copulas.html  02_vine_copulas.ipynb  03_vine_copulas_fit_sample.html  03_vine_copulas_fit_sample.ipynb  04_discrete_variables.html  04_discrete_variables.ipynb  05_benchmark.html  05_benchmark.ipynb  HelloWorld.ipynb  HelloWorld.ipynb.body.repo  HelloWorld.ipynb.md.repo  benchmark.ipynb  bivariate_copulas.ipynb  bivariate_copulas.ipynb.md.repo  discrete_variables.ipynb  discrete_variables.py  test.py  test_old.py  use_graphs.ipynb  (+3 more)
(+170 files in other folders)
